tests/errors/intrinsics13.f90
program intrinsics13
    print *, min(12, 13.94)
end program